added Java Transaction API dependency which we were previously getting as a consequence of using Hibernate -- it's now possible to start the server if you delete the live examples system app

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	compile dependency('bval-jsr303')
 	compile dependency('jsap')
 	compile dependency('jetty-all-server')
+	compile dependency('jta')
 	
 	compileOnly dependency('servlet-api')
 	compileOnly dependency('junit')
