make the spec testing framework available for use by projects other than 'brjs-core', and ultimately, by any external developers that may wish to use it.

--- a/cutlass-tasks/build.gradle
+++ b/cutlass-tasks/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
 	testCompile dependency('junit')
 	testCompile dependency('mockito-core')
-
+	testCompile dependency('httpclient')
+	testCompile dependency('hamcrest-all')
+	
 	testRuntime project(path: ':brjs-logger-binding')
 }
