--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	
 	compileOnly dependency('servlet-api')
 	compileOnly dependency('junit')
+	compileOnly dependency('mockito-core')
 	compileOnly dependency('httpclient')
 	compileOnly dependency('hamcrest-all')
 	
