switched back to chromium 25 for linux, as this works on all flavours of linux

--- a/conf/test-runner.conf
+++ b/conf/test-runner.conf
@@ -28,8 +28,8 @@ browserPaths:
     safari6: /Applications/Safari.app/Contents/MacOS/Safari
 # firefox on Mac doesnt use a custom profile because of a bug with the profile argument (https://bugzilla.mozilla.org/show_bug.cgi?id=673955)
   linux:
-    chrome-stable: ../../build/browsers/chrome-linux-25.0.1332.0/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
-    chrome: ../../build/browsers/chrome-linux-25.0.1332.0/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
+    chrome-stable: ../../build/browsers/chrome-linux/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
+    chrome: ../../build/browsers/chrome-linux/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
     chrome-beta: ../../build/browsers.beta/chrome-linux/chrome$$-private$$-private$$-profile$$../../build/browsers.beta/profile/chromium
     chromedriver: ../../build/browsers/chromedriver
     firefox-stable: ../../build/browsers/firefox-linux-21.0/firefox$$-private$$-private$$-profile$$../../build/browsers/profile/firefox
