--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -87,7 +87,7 @@ Dependencies.putAll([
 	'trang'						:	'com.thaiopensource:trang:20091111',
 
 	'cobertura'					:	'net.sourceforge.cobertura:cobertura:1.9.4.1',
-	'JsTestDriver'				:	'com.google:JsTestDriver:1.3.3.d-caplin_4',
+	'JsTestDriver'				:	'com.google:JsTestDriver:1.3.3d-brjs1',
 	'ecj'						:	'org.eclipse.jdt.core.compiler:ecj:3.7.2',
 	'closure-compiler'			:	'com.google.javascript:closure-compiler:r2180',
 	'jsdoc_toolkit'				:	'jsdoc_toolkit:jsdoc_toolkit:2.4.0@zip',
