--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 import static org.bladerunnerjs.BuildVersionCalculator.*
 
-apply from: 'composite-tasks.gradle'
 apply from: 'wrapper.gradle'
 
 allprojects {
@@ -122,3 +121,61 @@ task copyBrowsers(type: Sync) {
     		file(browserProfileDir + "/firefox/prefs.js").text = "user_pref(\"browser.shell.checkDefaultBrowser\", false);\nuser_pref(\"browser.sessionstore.max_resumed_crashes\", -1);\nuser_pref(\"toolkit.startup.max_resumed_crashes\", -1);\nuser_pref(\"toolkit.startup.recent_crashes\", -1);\n";
     	}
 }
+
+
+
+/* provides compound tasks that are run in CI */
+
+task runAllJavaTests {
+	description "Runs 'test' for all Java projects."
+}
+subprojects {
+	afterEvaluate { project ->
+		project.tasks.withType(Test) { testTask ->
+			runAllJavaTests.dependsOn testTask
+		}
+		
+		runAllJavaTests.dependsOn tasks.matching { Task task -> task.name.equals("coberturaReports")}
+	}
+}
+
+task cleanJava {
+	description "Runs clean for all Java projects."
+}
+subprojects {
+	afterEvaluate { project ->
+		if (project.plugins.hasPlugin(JavaPlugin.class)) {
+			cleanJava.dependsOn project.clean
+		}
+	}
+}
+
+
+task build {
+	description "Builds the Cutlass SDK (without JsDocs) and build ands tests all SDK dependencies."
+}
+subprojects {
+	afterEvaluate { subProject ->
+		if (!subProject.name.equals('test-apps')) {
+			subProject.parent.build.dependsOn subProject.getTasksByName('build',false)
+		}
+	}
+}
+
+
+task buildSdk {
+	description "Builds the Cutlass SDK and build ands tests all SDK dependencies."
+}
+afterEvaluate { project ->
+	buildSdk.dependsOn build
+}
+subprojects {
+	afterEvaluate { subProject ->
+		if (subProject.name.equals('cutlass-libraries')) {
+			buildSdk.dependsOn subProject.getTasksByName('buildJsDoc',false)
+		}
+	}
+}
+
+
+
