--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -122,7 +122,7 @@ task copySdkIncludes(type: Copy) {
 	from "sdk-includes"
 	into file("sdk")
 	doFirst {
-		delete fileTree(dir:"sdk",include:"*", exclude:".p4ignore", ".gitignore")
+		delete fileTree(dir:"sdk",include:"*", exclude:[".p4ignore", ".gitignore"])
 	}
 	doLast {
 		ant {
