fixed logger deps so we no longer get SLF4J warnings when running tests.

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	testRunner dependency('JsTestDriver')
 	// Note: don't try to add support for transitive dependencies here as it will just fail
 	testRunner project(path: ':js-test-driver-bundler-plugin', transitive : false)
-	testRunner project(path: ':brjs-logger')
+	testRunner project(path: ':brjs-logger-binding')
 	testRunner files('JsTestDriver.conf')
 
 	deployerJars dependency('wagon-http')
