--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -32,8 +32,6 @@ dependencies {
 	application dependency('jsp-2.1-glassfish')
 	
 	systemApp (project(path: ':system-app-servlets'))
-	
-//	jsLibsAndDocs project(path: ':cutlass-libraries', configuration: 'libsAndDocsZip')
 
 	testRunner dependency('JsTestDriver')
 	// Note: don't try to add support for transitive dependencies here as it will just fail
@@ -123,7 +121,7 @@ task assembleSdk, type: Copy, dependsOn: [configurations.system, configurations.
 	}
 	file("sdk/system-applications").listFiles().each {
 		if (it.isDirectory()) {
-			into ("sdk/${it.name}/WEB-INF/lib") {
+			into ("sdk/system-applications/${it.name}/WEB-INF/lib") {
 				from configurations.systemApp
 				rename { String fileName ->
 					if ( !fileName.startsWith("brjs-") )
@@ -164,6 +162,14 @@ task assembleSdk, type: Copy, dependsOn: [configurations.system, configurations.
 	}
 }
 
+task assembleJsDoc, type:com.caplin.gradle.tasks.JsDoc, dependsOn: assembleSdk, {
+	jsDocsDir = file("sdk/docs/jsdoc")
+	// TODO: Hardcoded reference to caplin's core library location, we should attempt to use the BRJS model for getting this location
+	jsRootPathRelativeToJsDocDir = "sdk/libs/javascript/caplin/src"
+	jsDocToolkitDir = file("sdk/jsdoc-toolkit")
+	templateDir = file("sdk/jsdoc-templates/Caplin")
+}
+
 
 def createTestTask = { taskName, taskTestDir, taskTestType, browser ->
 	task taskName, type: com.caplin.gradle.tasks.RunJstdTests, {
@@ -174,20 +180,31 @@ def createTestTask = { taskName, taskTestDir, taskTestType, browser ->
     	inputs.dir file("conf/")
 		testType = taskTestType
 		browsers = browser
-		testDir = taskTestDir
-		enabled = false //TODO: remove this once the presenter libs have been moved across
+		testDir = taskTestDir 
 	}
 }
 
-createTestTask "testJsIE", "system-applications", "ALL", "ie"
-createTestTask "testJsChrome", "system-applications", "ALL", "chrome"
-createTestTask "testJsFirefox", "system-applications", "ALL", "firefox"
+createTestTask "testJsIE", "libs/javascript", "ALL", "ie"
+createTestTask "testJsChrome", "libs/javascript", "ALL", "chrome"
+createTestTask "testJsFirefox", "libs/javascript", "ALL", "firefox"
 
-task test, dependsOn:[testJsChrome, testJsFirefox]
-task testIE, dependsOn:testJsIE
+createTestTask "testSystemAppsIE", "system-applications", "ALL", "ie"
+createTestTask "testSystemAppsChrome", "system-applications", "ALL", "chrome"
+createTestTask "testSystemAppsFirefox", "system-applications", "ALL", "firefox"
+
+//TODO: remove this once the presenter libs have been moved across
+testSystemAppsIE.enabled = false
+testSystemAppsChrome.enabled = false
+testSystemAppsFirefox.enabled = false
 
 
-assemble.dependsOn assembleSdk
+
+
+task test, dependsOn:[testJsChrome, testJsFirefox, testSystemAppsChrome, testSystemAppsFirefox]
+task testIE, dependsOn: [testJsIE, testSystemAppsIE]
+
+
+assemble.dependsOn = [assembleSdk, assembleJsDoc]
 
 task check, dependsOn: assemble, {}
 task build, dependsOn: [assemble, check, test], {}
@@ -278,6 +295,8 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 		"*/sdk/templates/**/*",
 		"*/sdk/templates/**/tests/**/*",
 		"*/sdk/docs/jsdoc/index.html",
+		"*/sdk/docs/jsdoc/classesindex.html", 
+		"*/sdk/docs/jsdoc/static/*",
 		"*/README.txt",
 		"*/apps/apps.txt",
 		"*/licenses/java.html",
@@ -296,13 +315,8 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 	   "**/js-test-driver/bundles/**/*",
 	   "**/libs/**/tests/**/*",
 	   "**/system-applications/**/tests/**/*",
-	   "*/sdk/run*",	/* we dont want the scripts from cutlass-libraries included */
+	   "*/sdk/run*"
 	]
-	gradle.taskGraph.whenReady { graph ->
-		if (graph.hasTask(':cutlass-libraries:buildJsDoc')) {
-			bannedPaths += [ "*/sdk/docs/jsdoc/classesindex.html", "*/sdk/docs/jsdoc/static/*" ]
-		}
-	}
 }
 check.dependsOn checkSdkStructure
 
